# src/controllers/userController.js
@@ -179,8 +179,10 @@ exports.signIn = async function (req, res) {
   }
 };
 
+
+
 exports.kakao = async function (req, res) {
-  const REST_API_KEY = "a989cd90aa0be7eac5f9315560bd8b75";
+  const REST_API_KEY = "a5bb3faff700411ecd5b1adc2c58e217";
   const REDIRECT_URI = "http://localhost:3232/user/kakao-redirect";
   console.log("들어오긴하는데");
 
@@ -197,7 +199,10 @@ exports.kakao = async function (req, res) {
 
   const login = await request(options, function (err, response, body) {
     console.log("callback");
+    console.log(body);
   });
+
+  console.log(login)
 
   // await axios.get(`https://kauth.kakao.com/oauth/authorize?client_id=a989cd90aa0be7eac5f9315560bd8b75&redirect_uri=http://localhost:3232/user/kakao-redirect&response_type=code`,{
   //     headers: { 'content-type': 'application/x-www-form-urlencoded' },
@@ -209,7 +214,7 @@ exports.kakao = async function (req, res) {
   //       console.log("에러안나는데")
   //   })
   //   console.log("왜 악시오시가 안대?")
-  // https://kauth.kakao.com/oauth/authorize?client_id=a989cd90aa0be7eac5f9315560bd8b75&redirect_uri=http://localhost:3232/user/kakao-redirect&response_type=code
+  // https://kauth.kakao.com/oauth/authorize?client_id=a5bb3faff700411ecd5b1adc2c58e217&redirect_uri=http://localhost:3232/user/kakao-redirect&response_type=code
 };
 
 exports.kakaoRedirect = async function (req, res) {
@@ -217,7 +222,7 @@ exports.kakaoRedirect = async function (req, res) {
   console.log("코드다");
   console.log(code);
 
-  const REST_API_KEY = "a989cd90aa0be7eac5f9315560bd8b75";
+  const REST_API_KEY = "a5bb3faff700411ecd5b1adc2c58e217";
   const REDIRECT_URI = "http://localhost:3232/user/kakao-redirect";
 
   // 리퀘스트 모듈
@@ -229,7 +234,6 @@ exports.kakaoRedirect = async function (req, res) {
       client_id: REST_API_KEY,
       redirect_uri: REDIRECT_URI,
       code: code,
-      client_secret: "1TN0Nj02h6FY42Xqy51y4YyAPSbf9849",
     },
   };
 
@@ -260,3 +264,70 @@ exports.kakaoRedirect = async function (req, res) {
 
   return res.send(utils.successTrue(200, `카카오 리다이렉트 성공`));
 };
+
+/**
+ * 2020.12.13
+ * 카카오 로그인 API
+ * /kakaoLogin
+ * request header : Bearer {ACCESS_TOKEN}
+ */
+
+exports.kakaoLogin = async function (req, res) {
+  try {
+    const kakaoAccessToken = req.headers.kakaoaccesstoken
+    const options = {
+      method: "GET",
+      uri: "https://kapi.kakao.com/v2/user/me",
+      json: true,
+      headers: {
+        Authorization: `${kakaoAccessToken}`
+      }
+    };
+    try {
+      const userInfo = await request(options);
+      //console.log(`${userInfo}`)
+      console.log(`${userInfo.kakao_account.email}`)
+
+      const check = await query(
+        `SELECT userIdx, nickname, email, password FROM userInfo WHERE email = ?`,
+        [userInfo.kakao_account.email]
+      );
+      let userIdx = 0;
+  
+      if (check.length !== 1) {
+        // 새로운 유저 회원 가입
+        console.log('새로운 유저 회원 가입')
+        const signUpUserResult = await query(
+          `INSERT INTO userInfo (nickname, email, type) VALUES (?, ?, ?)`,
+          [userInfo.properties.nickname, userInfo.kakao_account.email, "kakao"]
+        );
+        userIdx = signUpUserResult.insertId;
+      } else {
+        // 기존 회원 로그인
+        console.log('기존 회원 로그인')
+        userIdx = check[0].userIdx;
+      }
+      // 토큰 생성
+      let token = await jwt.sign(
+        {
+          userIdx: userIdx,
+          id: userInfo.properties.nickname,
+        }, // 토큰의 내용(payload)
+        config.SECRET_ACCESS_KEY, // 비밀 키
+        {
+          expiresIn: "365d",
+          subject: "userInfo",
+        } // 유효 시간은 365일
+      );
+      console.log(token);
+      return { token };
+    } catch (e) {
+      throw e;
+    }
+  } catch (e) {
+    console.log(e.message);
+    next(e);
+  }
+}
+
+
